# django-app

./: pyproject.toml  requirements.txt
mysite/mysite/: settings.py
